k8s/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-app
  namespace: devops-project

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
      - name: devops-app
        image: jannawael/backend-app:latest

        ports:
        - containerPort: 3000

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "250m"

        livenessProbe:
          httpGet:
            path: /health
            port: 3000

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
