k8s/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: devops-project
spec:
  type: ClusterIP
  ports:
  - port: 80          # Port exposed within the cluster
    targetPort: 3000 
  selector:
    app: devops-app
