k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: devops-project
spec:
  type: ClusterIP
  ports:
  - port: 80          
    targetPort: 80 
  selector:
    app: frontend
