k8s/headless_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: devops-project
spec:
  clusterIP: None # "None" creates a Headless Service required for StatefulSets
  selector:
    app: postgres
  ports:
  - port: 5432
